[GC] Print elastic heap log under -XX:+PrintGCDetails
Summary: Elastic related info is printed only when -XX:+PrintGCDetails is set.

Test Plan: hotspot/test/elastic-heap

Reviewed-by: mmyxym, tanghaoth90, Yude Lin

Issue: https://github.com/alibaba/dragonwell8/issues/201